Fixed overlapping of text in mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,11 @@ body {
     text-decoration: none;
     font-weight: bold;
 }
+@media (max-width: 991px) {
+    #content1 {
+        margin-top: 5vh;
+    }
+}
 #content2 {
     background-color: lightgreen;
 }
